openecomp-be/lib/openecomp-tosca-lib/src/test/resources/vspmanager.csar/manifest/invalid/metadata-no-entry.mf
metadata:
  vnf_product_name: vPP
  : no-entry-value